// Copyright 2019 SignalCD Team
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package signalcd;
option go_package = "signalcdproto";

import "google/api/annotations.proto";

service UIService {
    rpc ListDeployment (ListDeploymentRequest) returns (ListDeploymentResponse) {
        option (google.api.http) = {
          post: "/v1/deployments"
        };
    }
}

message ListDeploymentRequest {
}

message ListDeploymentResponse {
    repeated Deployment deployments = 1;
}

message Deployment {
    int64 number = 1;
}
